# MIVF

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  CREDITS.md  LICENSE  Makefile  Makefile_3ds_v0_4  Makefile_phase3_v0_9_rgb565  NOTICE.md  README.md  RELEASE_STATUS.md  SECURITY.md  encode_mivf.py  encode_mivf.spec  miv1p_fastest_c.c  miv1p_mt_wrapper.py  miv1p_tools_fast.py  miv1p_tools_fast2.py  miv2y_fastest_c.c  miv2y_ultra_fast_c.c  mkdocs.yml
mivf-gui/: pyproject.toml  run_mivf_gui.cmd  run_mivf_gui.ps1  run_mivf_gui.sh
mivf-gui/src/: mivf_guimain_window.py  mivf_guiproject.py  mivf_guitheme_export.py
mivf-gui/src/mivf_gui/: __init__.py  asset_pipeline.py  backend.py  background_editor.py  background_recipe.py  chapter_authoring.py  control_editor.py  control_recipe.py  dashboard_canvas.py  encode_queue.py  main_window.py  media_probe.py  movie_info.py  movie_info_dialog.py  preflight_dialog.py  presets.py  preview_tour.py  project.py  project_home.py  storage_plan.py  storage_plan_dialog.py  theme_browser.py  theme_export.py  theme_export_c3.py  theme_export_dialog.py  (+2 more)
mivf-gui/tests/: smoke_offscreen.py  test_backend_equivalence.py  test_background_recipe.py  test_c3_recipe.py  test_chapter_authoring.py  test_dashboard_canvas.py  test_encode_queue.py  test_media_probe.py  test_movie_info.py  test_preview_tour.py  test_project_home.py  test_screensaver.py  test_storage_plan.py  test_stream_selection_cli.py  test_subtitle_selection.py  test_theme_browser.py  test_theme_export_integration.py  test_theme_export_runtime_manifest.py  test_theme_plan.py
(+150 files in other folders)
